--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -16,3 +16,7 @@
   --breakpoint-xs: 25rem;
   --breakpoint-3xl: 100rem;
 }
+
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
